--- a/src/pages/cienciasambientales/index.astro
+++ b/src/pages/cienciasambientales/index.astro
@@ -111,7 +111,7 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
     <!-- Docencia -->
     <section class="editorial-text subtle">
 
-      <h2 class="section-subtitle">Docencia especializada</h2>
+      <h2 class="section-subtitle">Docente colaborador</h2>
 
       <p>
         Ejerzo la docencia en el Colegio Oficial de Ambientólogos de Cataluña,
