--- a/src/pages/cienciasambientales/index.astro
+++ b/src/pages/cienciasambientales/index.astro
@@ -7,7 +7,7 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
 
     <!-- Header -->
     <section class="page-header">
-      <h1>Ciencias Ambientales</h1>
+      <h1>Ambientólogo colegiado</h1>
     </section>
 
     <!-- Texto principal -->
